# mlflow-project-cookie

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  MLProject  README.md  conda_env.yaml  main.py  noxfile.py  pyproject.toml  python_env.yaml  requirements.dev.txt
{{cookiecutter.project_slug}}/docs/: README.md
{{cookiecutter.project_slug}}/notebooks/: example.ipynb
{{cookiecutter.project_slug}}/tests/: test_fish.py
